Switch from Map to List for opening hours caching
days are now sorted